# sql-data-guard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_requirements.txt  wrapper.Dockerfile
.github/.github/workflows/: plugin-publish-dify.yml
.github/actions/cached-requirements/: action.yaml
.github/workflows/: build-and-deploy-docker-image.yaml  build-and-deploy-mcp-docker-image.yaml  llm-test.yaml  plugin-publish-dify.yml  pypi-publish.yaml  python-compatability-test.yaml  test.yaml
docs/: manual.md
examples/mcp-wrapper-postgres/: config.json
examples/mcp-wrapper-sqlite/: config-without-sql-data-guard.json  countries.db  requirements.txt
examples/mcpwrapper/: config.json  mcp_example.py
plugins/dify/: README.md  manifest.yaml  requirements.txt
plugins/dify/provider/: sql_data_guard_provider.py  (+1 more)
src/: sql_data_guard.py  sql_guard.py
src/sql_data_guard/: __init__.py  builder_multiple_values.py  restriction_validation.py  restriction_verification.py  sql_data_guard.py
test/: conftest.py  test-rest-api-unit.py  test.requirements.txt  test_duckdb.py  test_duckdb_unit.py  test_rest_api_unit.py  test_sql_guard_curr_unit.py  test_sql_guard_joins_unit.py  test_sql_guard_llm.py  test_sql_guard_modified_unit.py  test_sql_guard_temp_unit.py  test_sql_guard_unit.py  test_sql_guard_unit_01.py  test_sql_guard_updates_unit.py  test_sql_guard_validation_unit.py  test_utils.py  unit_test_utils.py
test/resources/: orders_ai_generated.jsonl  orders_test.jsonl  prompt-injection-examples.jsonl
(+4 files in other folders)
